fix go home button z-index on xray effect

--- a/X-Ray-Effect/style.css
+++ b/X-Ray-Effect/style.css
@@ -21,3 +21,8 @@ canvas {
     z-index: 100;
     display: block;
 }
+
+.go-home {
+    position: absolute;
+    z-index: 200 !important;
+}
